<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>
    
    <EditText
        android:id="@+id/ET_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/app_logo"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_background"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <EditText
        android:id="@+id/ET_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ET_email"
        android:layout_marginTop="10dp"
        android:hint="@string/pass"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:background="@drawable/et_background"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ET_pass"
        android:layout_alignStart="@+id/ET_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_background"
        android:text="@string/Log_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_alignStart="@+id/ET_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_background"
        android:text="@string/SignUp"
        android:textColor="@color/white"
        android:textSize="15sp" />


</RelativeLayout>